Corrigindo bug no overflow-x

--- a/src/styles/_cast.scss
+++ b/src/styles/_cast.scss
@@ -7,7 +7,7 @@
 
     @media (max-width: 767px) {
         padding: 20vw 2vw;
-        height: 100vh;
+        height: 115vh;
     }
 
     background-color: variables.$buttonPrimaryColor;
@@ -20,10 +20,10 @@
         gap: 200px;
 
         @media (max-width: 767px) {
-            max-width: 320px;
-            width: 90%;
+            max-width: 480px;
+            width: 100%;
             grid-template-columns: 1fr 1fr;
-            gap: 5px;
+            gap: 50px;
         }
 
         &__actor {
@@ -32,9 +32,9 @@
             height: 300px;
 
             @media (max-width: 767px) {
-                margin-bottom: 50px;
-                width: 150px;
-                height: 200px;
+                margin-bottom: 10px;
+                width: 170px;
+                height: 220px;
             }
 
             .images {
