--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -9,9 +9,9 @@
 
     @media (max-width: 767px) {
         display: block;
-        max-width: 400px;
+        max-width: 500px;
         width: 100%;
-        padding: 5vw 26vw;
+        
     }
 
     &__logo {
@@ -19,9 +19,9 @@
         width: 100%;
 
         @media (max-width: 767px) {
-            max-width: 200px;
+            max-width: 500px;
             width: 100%;
-            margin: 50px -30px 50px;
+            padding: 20vw 1vw;
         }
     }
 
@@ -30,9 +30,9 @@
         display: flex;
 
         @media (max-width: 767px) {
-            max-width: 110px;
+            max-width: 120px;
             display: block;
-            margin-left: 5px;
+            margin: 0 auto;
         }
 
         &__item {
@@ -43,10 +43,6 @@
 
             .button {
                 color: variables.$textSecondaryColor;
-
-                @media (max-width: 767px) {
-                    font-size: 13px;
-                }
             }
 
             &:hover {
