--- a/src/styles/_watch.scss
+++ b/src/styles/_watch.scss
@@ -19,7 +19,7 @@
         position: relative;
 
         @media (max-width: 767px) {
-            width: 310px;
+            width: 390px;
         }
         
 
